# TD

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  before_cache.ps1
ci/: before_cache.ps1  before_cache.sh  before_deploy.ps1  before_deploy.sh  build.sh  install.sh
src/: create_m3u8.rs  curl.rs  future.rs  main.rs  manager.rs  twitch.rs
src/m3u8/: create_m3u8.rs  main.rs
src/main/: error.rs  future.rs  http.rs  main.rs  manager.rs  threadpool.rs  twitch.rs  utils.rs
