[package]
name = "twitchdl"
version = "0.1.0"
authors = ["ShuangYa"]
edition = "2018"

[dependencies]
error-chain = "0.12.0"
getopts = "0.2.18"
curl = "0.4.19"
serde_json = "1.0.39"
m3u8-rs = "1.0.2"
indicatif = "0.11.0"
chrono = "0.4.6"
url = "1.7.2"
tokio-curl = "0.1.11"
tokio-core = "0.1.17"
tokio-fs = "0.1.6"
futures = "0.1.25"