[package]
name = "twitchdl"
version = "0.2.0"
authors = ["ShuangYa"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
error-chain = "0.12"
getopts = "0.2"
serde_json = "1.0"
m3u8-rs = "1.0"
indicatif = "0.11"
chrono = "0.4"
url = "1.7"
tokio = "0.1"
futures = "0.1"
rand = "0.6.5"
hyper = "0.12"
hyper-tls = "0.3"

[[bin]]
name = "twitchdl"
path = "src/main/main.rs"

[[bin]]
name = "m3u8"
path = "src/m3u8/main.rs"